# dev_environments

./: .gitignore  Readme.md
cpp_challenge/: compile_on_save.py  template.cpp
cpp_terminal_app/: CMakeLists.txt  Dockerfile  README.md  appveyor.yml  build_with_clang.sh  code_stats.py
cpp_terminal_app/cmake/: conan.cmake
cpp_terminal_app/man/: new_project
cpp_terminal_app/src/: CMakeLists.txt  main.cpp  version.hpp.in
vim_general/: vimrc
